# lfp-logging-py

./: .gitignore  README.md  main.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
src/lfp_logging/: __init__.py  config.py  cool.py  log_level.py  logs.py
tests/: run.py  test_logs.py
