[build-system]
requires = ["uv_build>=0.9"]
build-backend = "uv_build"

[project]
name = "lfp_logging"
version = "0.0.1"
description = "A simple, zero-dependency lazy-initialization logging utility"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []
