[build-system]
requires = ["uv_build>=0.9"]
build-backend = "uv_build"

[project]
name = "lfp-logging"
version = "0.0.4"
description = "A simple, zero-dependency lazy-initialization logging utility"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = ["pytest", "ruff", "bumpversion"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64", "win-64", "win-arm64"]

[tool.pixi.pypi-dependencies]
lfp-logging = { path = ".", editable = true }
 
[tool.pixi.environments]
default = { solve-group = "default", features = ["dev"] }
dev = { features = ["dev"], solve-group = "default" }


[tool.pixi.tasks]
ruff-fix = "ruff check . --fix --unsafe-fixes && ruff format ."
publish = { cmd = "git add . && (git diff --staged --quiet || git commit -m \"pre-release: staging changes\") && bumpversion {{ part }} --message \"{{ message }}\" && git push origin HEAD --tags", args = [{ arg = "part", default = "patch" }, { arg = "message", default = "incrementing version to {new_version}" }], depends-on = ["ruff-fix"] }

